[package]
edition = "2018"
license = "MIT"
name = "number_to_words"
authors = ["Nex-Pro", "NexPro", "bwintertkb"]
homepage = "https://github.com/Nex-Pro/rust-number-to-words"
description = "Converts number to words"
repository = "https://github.com/Nex-Pro/rust-number-to-words"
keywords = ["utility", "number", "finance", "banking"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.2" # 0.4.3 uses rust 2021

[dev-dependencies]
rstest = "0.11.0" # 0.12.0 uses rust 2021
