[package]
edition = "2018"
license = "MIT"
name = "number_to_words"
authors = ["Nex-Pro", "NexPro", "bwintertkb"]
homepage = "https://github.com/Nex-Pro/rust-number-to-words"
description = "Converts number to words"
repository = "https://github.com/Nex-Pro/rust-number-to-words"
keywords = ["utility", "number", "finance", "banking"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = { version = "0.4.2-a", git = "https://github.com/sizeru/num-2018.git" } # 0.4.3 uses rust 2021
num = "=0.4.2"
num-complex = "=0.4.5"
num-bigint = "=0.4.4"
num-traits = "=0.2.18"
proc-macro2 = "=1.0.65"

[dev-dependencies]
rstest = "=0.11.0" # 0.12.0 uses rust 2021
